# todo-manager

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README.zh-CN.md  config.example.yaml
.zcode/plans/: plan-sess_67d2c024-1958-4d5f-af1d-e9651eb8086f.md  plan-sess_ef6e78d1-090c-4b71-8356-c29ed716a3b0.md
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/app/: app.go
backend/internal/auth/: basic.go  oidc.go
backend/internal/authz/: access_key_permissions.go
backend/internal/config/: config.go  config_property_test.go
backend/internal/database/: database.go  migrate.go
backend/internal/handler/: access_key_handler.go  auth_handler.go  (+9 more)
backend/static/: static.go
charts/todo-manager/: Chart.yaml  values.yaml
charts/todolist/: Chart.yaml  values.yaml
desktop/: README.md  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  vite.config.ts
desktop/scripts/: gen_icon.py
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: gen_icon.py  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
frontend/: package-lock.json  package.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/tests/: AccessKeysPage.test.tsx  DuplicatesList.test.tsx  FilterBar.MoreActionsMenu.DuplicateSelector.test.tsx  FollowupSection.test.tsx  SummaryDetailPanel.test.tsx  setup.ts
skills/todo-cli-manage-todos/: SKILL.md
todo-cli/: go.mod  main.go
(+275 files in other folders)
