[package]
name = "todo-desktop"
version = "0.1.0"
description = "Todo desktop client (Tauri)"
authors = ["graydove"]
edition = "2021"

[lib]
name = "todo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
