[package]
name = "todo-desktop"
version = "0.1.0"
description = "Todo desktop client (Tauri)"
authors = ["graydove"]
edition = "2021"

[lib]
name = "todo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Production-only feature: enables Tauri's custom-protocol (tauri://) asset
# serving so the bundled frontend is used instead of localhost:1420.
# `tauri build` enables this automatically; when using `cargo xwin build`
# directly (cross-compiling to MSVC from Linux), pass `--features prod`.
[features]
prod = ["tauri/custom-protocol"]
